--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxt/content": "^1.14.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
