--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "sass": "^1.32.13",
+    "sass-loader": "^10.1.1",
     "semantic-release": "^17.4.3",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
