--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
+    "stylelint-scss": "^3.19.0",
     "vue-jest": "^3.0.4"
   },
   "release": {
