--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
     "test": "jest",
-    "content:add": "node ./scripts/create-content.js"
+    "content:add": "node ./scripts/create-content.js",
     "content:end": "node ./scripts/ending-content.js"
   },
   "dependencies": {
