--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/prismic": "^1.3.1",
     "core-js": "^3.15.2",
     "nuxt": "^2.15.7"
   },
