--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style",
-    "test": "jest",
-    "content:add": "node ./scripts/create-content.js",
-    "content:end": "node ./scripts/ending-content.js"
+    "test": "jest"
   },
   "dependencies": {
     "@nuxtjs/prismic": "^1.3.1",
