--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/prismic": "^1.3.1",
     "core-js": "^3.15.2",
     "nuxt": "^2.15.8"
