--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^13.2.0",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@nuxt/image": "^0.6.2",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/fontawesome": "^1.1.2",
