--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,7 +35,15 @@ jobs:
           PLAUSIBLE_URL: ${{ secrets.PLAUSIBLE_URL }}
 
       - name: Release
-        run: npx semantic-release
+        run: |
+          npx -p @semantic-release/commit-analyzer \
+          -p @semantic-release/changelog \
+          -p @semantic-release/git \
+          -p @semantic-release/github \
+          -p @semantic-release/npm \
+          -p @semantic-release/release-notes-generator \
+          -p semantic-release \
+          semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
