--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
       - name: Setup node env
         uses: actions/setup-node@v3.4.1
@@ -35,18 +38,16 @@ jobs:
         env:
           PLAUSIBLE_URL: ${{ secrets.PLAUSIBLE_URL }}
 
-      - name: Release
-        run: |
-          npx -p @semantic-release/commit-analyzer \
-          -p @semantic-release/changelog \
-          -p @semantic-release/git \
-          -p @semantic-release/github \
-          -p @semantic-release/npm \
-          -p @semantic-release/release-notes-generator \
-          -p semantic-release \
-          semantic-release
+      - name: Semantic Release
+        id: semantic
+        uses: cycjimmy/semantic-release-action@v3
+        with:
+          semantic_version: 19
+          extra_plugins: |
+            @semantic-release/changelog@6.0.2
+            @semantic-release/git@10.0.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
